--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,4 +1,4 @@
-@import "bootstrap-icons.scss";
+@import "bootstrap-icons";
 @import "../../../node_modules/bootstrap/scss/functions";
 @import "variables";
 @import "../../../node_modules/bootstrap/scss/bootstrap";
